// Package: net.ikigai.cds
// Module: cabinet.services
//
// Author: Narcis M. Pap
// Copyright (c) 2018 Ikigai Cloud. All rights reserved.

syntax = "proto3";
import "shared.proto";

// Counters are highly-scalable locally-distributed atomic INT fields

// Schematic Representation:
// Node: /c/n/{COUNT_ID}/{NODE_ID}/{0x0 - OxF} = atomic<INT>
// Edge: /c/e/{COUNT_ID}/{SUBJECT}/{PREDICATE}/{TARGET}/{0x0 - OxF} = atomic<INT>

// IRI Relative Representation:
// Node: ./c/n/{COUNT_ID}/{NODE_ID}
// Edge: ./c/e/{COUNT_ID}/{SUBJECT}/{PREDICATE}/{TARGET}

message CounterIncrementRequest{
    oneof field{
        string node_id = 1;
        Edge edge = 2;
    }

    int32 counter = 9;
    int32 value = 10;
}

message CounterRequest{
    oneof field{
        string node_id = 1;
        Edge edge = 2;
    }

    int32 counter = 9;
}

message CounterValueResponse{
    int64 value = 1;
}
